<resources>
    <string name="app_name">Story App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="loading">Loading</string>
    <string name="logo">Logo</string>
    <string name="photo">Photo</string>
    <string name="share_your_best_moment">Share Your Best Moment</string>
    <string name="latest_stories">Latest Stories</string>
    <string name="account">Account</string>
    <string name="created_date">Created Date</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_new_story">Add New Story</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="input_photo_description">Input Photo Description</string>
    <string name="password_must_be_at_6_characters_long">Password Must Be At Least 6 Characters Long</string>
    <string name="email_format_must_be_valid">Email Format Must Be Valid</string>
    <string name="input_your_email">Input Your Email</string>
    <string name="input_your_password">Input Your Password</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="choose_image_first">Choose Image First</string>
    <string name="appwidget_text">Story App Banner</string>
    <string name="empty_text">No Data</string>
    <string name="see_location">See Location</string>
    <string name="share_location">Share Location</string>
    <string name="you_must_enable_gps">You must enable GPS</string>
</resources>